@@ -2,6 +2,10 @@
 CHANGE LOG
 =========================================================================
 
+2009-01-14 Warren L. DeLano <warren@delsci.com>
+
+	* eliminated alternative conformation identifiers from PQR files
+	
 2009-01-09 Warren L. DeLano <warren@delsci.com>
 
 	* added PyMOL> prompt to the Tk Window
